shared/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress-service
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: eapp1.myprojectsdomain.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-winter-frontend-clusterip-service
                port:
                  number: 80
          - path: /api-user
            pathType: Prefix
            backend:
              service:
                name: user-app-cluster-ip-service
                port:
                  number: 90
          - path: /api-calorie
            pathType: Prefix
            backend:
              service:
                name: calorie-app-cluster-ip-service
                port:
                  number: 50
          - path: /api-fitness
            pathType: Prefix
            backend:
              service:
                name: fitness-app-cluster-ip-service
                port:
                  number: 60
  tls:
    - hosts:
        - eapp1.myprojectsdomain.net
      secretName: eapp1-project-secret
